Fix failed tests on CircleCI

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -3058,7 +3058,7 @@ i.fa-smile-o:hover span {
     opacity: 1;
     display: block;
     z-index: 9999;
-    color: #ffffff;
+    color: hsla(360, 100%, 100%, 1);
     text-align: center;
     text-decoration: none;
     left: -60px;
@@ -3081,7 +3081,7 @@ i.fa-chevron-down:hover span {
     opacity: 1;
     display: block;
     z-index: 9999;
-    color: #ffffff;
+    color: hsla(360, 100%, 100%, 1);
     text-align: center;
     text-decoration: none;
     left: -60px;
@@ -3104,7 +3104,7 @@ i.fa-chevron-down:hover span {
     opacity: 1;
     display: block;
     z-index: 9999;
-    color: #ffffff;
+    color: hsla(360, 100%, 100%, 1);
     text-align: center;
     text-decoration: none;
     left: -30px;
