--- a/static/styles/widgets.scss
+++ b/static/styles/widgets.scss
@@ -133,3 +133,7 @@ button.poll-question:hover {
 .poll-question-header {
     display: inline-block;
 }
+
+.active-vote {
+    background-color: hsl(147, 87%, 88%);
+}
