--- a/static/templates/widgets/poll-widget-results.handlebars
+++ b/static/templates/widgets/poll-widget-results.handlebars
@@ -1,6 +1,6 @@
 {{#each options}}
 <li>
-    <button class="poll-vote" data-key="{{ key }}">
+    <button class="poll-vote {{#if curr_user_vote}}active-vote{{/if}}" data-key="{{ key }}">
         {{ count }}
     </button>
     <span class="poll-option">{{ option }}</span>
