Remove unused hover-underline class.

--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -7,7 +7,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-home" aria-hidden="true"></i>
                     </span>
-                    <span class="hover-underline">{{ _('All messages') }}</span>
+                    <span>{{ _('All messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
                     </span>
@@ -19,7 +19,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                     </span>
-                    <span class="hover-underline">{{ _('Private messages') }}</span>
+                    <span>{{ _('Private messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
                     </span>
@@ -30,7 +30,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-at" aria-hidden="true"></i>
                     </span>
-                    <span class="hover-underline">{{ _('Mentions') }}</span>
+                    <span>{{ _('Mentions') }}</span>
                     <span class="count">
                         <span class="value"></span>
                     </span>
@@ -41,7 +41,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-star" aria-hidden="true"></i>
                     </span>
-                    <span class="hover-underline">{{ _('Starred messages') }}</span>
+                    <span>{{ _('Starred messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
                     </span>
