--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -14,12 +14,12 @@
                 </a>
                 <span class="arrow stream-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
             </li>
-            <li class="top_left_private_messages global-filter" title="{{ _('Private messages') }} (P)">
+            <li class="top_left_private_messages global-filter">
                 <a href="#narrow/is/private">
                     <span class="filter-icon">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                     </span>
-                    <span>{{ _('Private messages') }}</span>
+                    <span title="{{ _('Private messages') }} (P)">{{ _('Private messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
                     </span>
