--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -165,8 +165,14 @@
                           name="realm_google_hangouts_domain"
                           class="admin-realm-google-hangouts-domain"/>
                     </div>
+                    <div id="zoom_help_text" class="zoom_credentials">
+                        <p>
+                            Note: Zoom support is experimental. In particular, Zulip currently supports having
+                            only one active Zoom meeting at a time.
+                        </p>
+                    </div>
                     <div id="zoom_user_id" class="zoom_credentials">
-                        <label>{{t 'Zoom user ID (required)' }}:</label>
+                        <label>{{t 'Zoom user ID or email address (required)' }}:</label>
                         <input type="text" id="id_realm_zoom_user_id"
                           name="realm_zoom_user_id"
                           class="admin-realm-zoom-field"/>
