--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -144,10 +144,10 @@
             </div>
         </div>
 
-        <div id="org-msg-feed" class="org-subsection-parent">
+        <div id="org-other-settings" class="org-subsection-parent">
             <div class="subsection-header">
                 <h3>{{t "Other settings" }}</h3>
-                {{ partial "settings-save-discard-widget" "section_name" "msg-feed" }}
+                {{ partial "settings-save-discard-widget" "section_name" "other-settings" }}
             </div>
             <div class="inline-block organization-settings-parent">
                 <div class="input-group">
