zoom: Avoid sending Zoom API secret to other admin clients.
Fixing this involves fixing the backend to handle unchanged field
submissions of the Zoom credentials without trying to re-validate the
credentials (for performance) as well as to fetch the already-sent
secret.

--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -189,7 +189,7 @@
                           class="admin-realm-zoom-field"/>
                     </div>
                     <div id="zoom_api_secret" class="zoom_credentials">
-                        <label>{{t 'Zoom API secret (required)' }}:</label>
+                        <label>{{t 'Zoom API secret (required if changed)' }}:</label>
                         <input type="text" id="id_realm_zoom_api_secret"
                           name="realm_zoom_api_secret"
                           autocomplete="off"
