settings: Disable autocomplete on various text fields.
This prevents browser autocomplete from annoying trying to insert
values into these settings fields.

--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -23,6 +23,7 @@
                         <input type="text" id="id_realm_message_content_edit_limit_minutes"
                           name="realm_message_content_edit_limit_minutes"
                           class="admin-realm-time-limit-input"
+                          autocomplete="off"
                           value="{{ realm_message_content_edit_limit_minutes }}"/>
                     </div>
                 </div>
@@ -57,6 +58,7 @@
                         <input type="text" id="id_realm_message_content_delete_limit_minutes"
                           name="realm_message_content_delete_limit_minutes"
                           class="admin-realm-time-limit-input"
+                          autocomplete="off"
                           value="{{ realm_message_content_delete_limit_minutes }}"/>
                     </div>
                 </div>
@@ -163,6 +165,7 @@
                         <label>{{t 'Domain for your <a href="https://gsuite.google.com" target="_blank">G Suite team</a> (required)' }}:</label>
                         <input type="text" id="id_realm_google_hangouts_domain"
                           name="realm_google_hangouts_domain"
+                          autocomplete="off"
                           class="admin-realm-google-hangouts-domain"/>
                     </div>
                     <div id="zoom_help_text" class="zoom_credentials">
@@ -175,18 +178,21 @@
                         <label>{{t 'Zoom user ID or email address (required)' }}:</label>
                         <input type="text" id="id_realm_zoom_user_id"
                           name="realm_zoom_user_id"
+                          autocomplete="off"
                           class="admin-realm-zoom-field"/>
                     </div>
                     <div id="zoom_api_key" class="zoom_credentials">
                         <label>{{t 'Zoom API key (required)' }}:</label>
                         <input type="text" id="id_realm_zoom_api_key"
                           name="realm_zoom_api_key"
+                          autocomplete="off"
                           class="admin-realm-zoom-field"/>
                     </div>
                     <div id="zoom_api_secret" class="zoom_credentials">
                         <label>{{t 'Zoom API secret (required)' }}:</label>
                         <input type="text" id="id_realm_zoom_api_secret"
                           name="realm_zoom_api_secret"
+                          autocomplete="off"
                           class="admin-realm-zoom-field"/>
                     </div>
                 </div>
