portico: Add ninth logo to /for/open-source testimonial section.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -1833,6 +1833,11 @@ nav ul li.active::after {
     background-color: transparent;
 }
 
+.portico-landing.hello .testimonials .company-box .company.openshot {
+    background-image: url(/static/images/landing-page/logos/openshot.png);
+    background-color: transparent;
+}
+
 .portico-landing.hello .testimonials .company-box .company.mixxx {
     background-image: url(/static/images/landing-page/logos/mixxx.png);
     background-color: transparent;
