--- a/templates/zerver/for-open-source.html
+++ b/templates/zerver/for-open-source.html
@@ -114,7 +114,7 @@
                     <div class="company inspire-hep"></div>
                     <div class="company mixxx"></div>
                     <div class="company fhir"></div>
-                    <div class="company hl7"></div>
+                    <div class="company openshot"></div>
                 </div>
             </div>
         </div>
