--- a/static/styles/components.scss
+++ b/static/styles/components.scss
@@ -66,6 +66,11 @@ a.no-underline:hover {
     font-style: italic;
 }
 
+.ps__rail-x,
+.ps__rail-y {
+      opacity: 0.6;
+}
+
 .ps--scrolling-x > .ps__rail-x > .ps__thumb-x:hover {
     background-color: hsl(0, 0%, 38%);
 }
