help: Increase the width of sidebar scrollbar.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -320,6 +320,11 @@ body {
 .help .sidebar a:visited {
     outline: none;
 }
+
+.help .sidebar .simplebar-scrollbar {
+    width: 10px;
+}
+
 .app.help .hamburger {
     display: none;
 }
