--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -425,7 +425,7 @@ li.show-more-private-messages {
     top: 0px;
 }
 
-.zero-topic-unreads .pm-box,
+.zero-pm-unreads .pm-box,
 .zero-topic-unreads .topic-box {
     margin-right: 15px;
 }
