buddy list: Use user-list-arrow class.
Using a more specific class avoids confusion related
to the .arrow class, which is not only a popover concept,
but also a Zulip concept in the left sidebar.

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -50,9 +50,26 @@
     padding-right: 15px;
 }
 
-#user_presences .arrow {
+#user_presences .user-list-arrow {
+    position: absolute;
     top: 0px;
+    right: 10px;
+    font-size: 0.8em;
+    display: none;
 }
+
+#user_presences li:hover .user-list-arrow {
+    display: inline;
+    cursor: pointer;
+    color: hsl(0, 0%, 53%);
+}
+
+#user_presences li .user-list-arrow:hover {
+    display: inline;
+    cursor: pointer;
+    color: hsl(0, 0%, 0%);
+}
+
 
 #group-pm-title {
     margin: 10px 0px 0px 0px;
