--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -12,7 +12,7 @@
                         <span class="value"></span>
                     </span>
                 </a>
-                <span class="arrow stream-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                <span class="arrow all-messages-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
             </li>
             <li class="top_left_private_messages global-filter">
                 <a href="#narrow/is/private">
