css: Use more specific selectors for sidebar icons.
This paves the way to tweak chevron geometry on an
individual basis without accidentally breaking other
stuff.  It's also more self-documenting CSS.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -241,9 +241,11 @@ a.conversation-partners:hover {
     text-decoration: underline;
 }
 
-ul.filters i {
+.filter-icon i,
+.all-messages-arrow i,
+.stream-sidebar-arrow i,
+.topic-sidebar-arrow i {
     padding-right: 0.25em;
-    /* Make filter icons the same width so labels line up. */
     display: inline-block;
     width: 13px;
 }
