--- a/static/templates/topic_list_item.handlebars
+++ b/static/templates/topic_list_item.handlebars
@@ -7,7 +7,7 @@
             <div class="value">{{unread}}</div>
         </div>
     </span>
-    <span class="arrow topic-sidebar-arrow">
+    <span class="topic-sidebar-arrow">
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
     </span>
 </li>
