user status: Hover on buddy list.
Hover on circle displays Active/Idle/Offline for green/orange/white
Hover on names displays Name, Status_text and last_seen

issue #11607

--- a/static/templates/user_presence_row.handlebars
+++ b/static/templates/user_presence_row.handlebars
@@ -1,6 +1,6 @@
 <li data-user-id="{{user_id}}" class="user_sidebar_entry {{#if num_unread}} user-with-count {{/if}} narrow-filter {{#if faded}} user-fade {{/if}}">
     <div class="selectable_sidebar_block">
-        <span class="{{user_circle_class}} user_circle"></span>
+        <span class="{{user_circle_class}} user_circle" title={{user_circle_status}}></span>
         <a class="user-presence-link"
           href="{{href}}"
           data-user-id="{{user_id}}"
