css: Remove hello class from /for/open-source.
This class controls a bunch of things, including the mobile responsive
layout, that we don't want on this page.

Fixes #11742.

--- a/templates/zerver/for-open-source.html
+++ b/templates/zerver/for-open-source.html
@@ -13,7 +13,7 @@
 
 {% include 'zerver/landing_nav.html' %}
 
-<div class="portico-landing hello why-page">
+<div class="portico-landing why-page">
     <div class="hero">
         <h1 class="center">{% trans %}The best chat for open source projects{% endtrans %}</h1>
         <p>Engage your community with fun, thoughtful, and organized discussion</p>
