overwrote the padding from .why-page .padded-content for the testimonials section

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -3657,6 +3657,10 @@ nav ul li.active::after {
         padding: 50px 20px;
     }
 
+    .portico-landing.why-page .testimonials .padded-content {
+        padding: 50px;
+    }
+
     .portico-landing.why-page .testimonials .carousel-quotes {
         width: 90%;
     }
