--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -6,6 +6,10 @@
     font-size: 0.89rem;
 }
 
+#global_filters {
+    font-size: 14px;
+}
+
 #left-sidebar #user-list,
 #left-sidebar #group-pm-list {
     padding-left: 10px;
@@ -379,7 +383,7 @@ ul.topic-list {
 ul.expanded_private_messages {
     list-style-type: none;
     font-weight: 300;
-    font-size: 0.9em;
+    font-size: 13px;
     font-weight: 400;
     margin-left: 0px;
     padding-bottom: 2px;
