fonts: Make STREAMS and USERS be 14px.
Before this they were 14.2px due to a complex set of
calculations.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -537,7 +537,7 @@ a:hover code {
 }
 
 .sidebar-title {
-    font-size: 1em;
+    font-size: 14px;
     color: hsl(0, 0%, 43%);
     font-weight: normal;
     display: inline;
