--- a/templates/zerver/apps.html
+++ b/templates/zerver/apps.html
@@ -26,6 +26,7 @@
                         <a class="link no-action" href="">
                             <button type="button" name="button" class="green">Download Zulip for <span class="platform"></span></button>
                         </a>
+                        <span id="download-android-apk"><a href="https://github.com/zulip/zulip-mobile/releases/latest">or manually download APK</a></span>
                     </div>
                 </div>
             </div>
