templates: Add "Download APK" button in apps.html
This allows user to download the latest version of android apk from
the apps/android.
This will help the users who use Android without Google Play to download
the app and install it with ease.

To implement this I added a Download APK link on the apps.html page
which always points to the latest released version.

Fixes #11647

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -4243,3 +4243,8 @@ nav ul li.active::after {
         left: -7%;
     }
 }
+
+#download-android-apk a {
+    color: hsl(0, 0%, 100%);
+    font-size: 13px;
+}
