css: Style sidebar titles in normal case.
All-caps is kinda ugly.  I use font weight instead to
provide emphasis.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -539,7 +539,7 @@ a:hover code {
 .sidebar-title {
     font-size: 14px;
     color: hsl(0, 0%, 25%);
-    font-weight: normal;
+    font-weight: 600;
     display: inline;
 }
 
