--- a/templates/zerver/app/right_sidebar.html
+++ b/templates/zerver/app/right_sidebar.html
@@ -9,7 +9,7 @@
         {% endif %}
         <div id="user-list">
             <div id="userlist-header">
-                <h4 class='sidebar-title' id='userlist-title' data-toggle="tooltip" title="{{ _('Filter users') }}">{{ _('USERS') }}</h4>
+                <h4 class='sidebar-title' id='userlist-title' data-toggle="tooltip" title="{{ _('Filter users') }}">{{ _('Users') }}</h4>
                 <i id="user_filter_icon" class='fa fa-search' aria-hidden="true" aria-label="{{ _('Filter users') }}" data-toggle="tooltip" title="{{ _('Filter users') }} (w)"></i>
             </div>
             <div class="input-append notdisplayed" id="user_search_section">
@@ -25,7 +25,7 @@
         </div>
         <div id="group-pm-list">
             <div id="group-pm-header">
-                <h4 class='sidebar-title' id='group-pm-title'>{{ _('GROUP PMs') }}</h4>
+                <h4 class='sidebar-title' id='group-pm-title'>{{ _('Group PMs') }}</h4>
             </div>
             <ul id="group-pms" class="filters scrolling_list">
             </ul>
