user status: Add user_circle hover test for PM Conversations List.
Add hover text that shows Active/Idle/Offline/Unavailable
for green/orange/white/white-with-line color user circles.

--- a/static/templates/sidebar_private_message_list.handlebars
+++ b/static/templates/sidebar_private_message_list.handlebars
@@ -14,7 +14,9 @@
                     {{else}}
                         <span class="{{user_circle_class}} user_circle"></span>
                     {{/if}}
-                </div>
+                {{else}}
+                    <span class="{{user_circle_class}} user_circle" title={{user_circle_status}}></span>
+                {{/if}}
 
                 <a href='{{url}}' class="conversation-partners" title="{{ recipients }}">
                     {{recipients}}
