user status: Add hover text for PM conversations list.
Add hover text similar to buddy list for Conversation List.
Change pm_list tests to accommodate changes to hover text.

--- a/static/templates/sidebar_private_message_list.handlebars
+++ b/static/templates/sidebar_private_message_list.handlebars
@@ -18,7 +18,7 @@
                     <span class="{{user_circle_class}} user_circle" title={{user_circle_status}}></span>
                 {{/if}}
 
-                <a href='{{url}}' class="conversation-partners" title="{{ recipients }}">
+                <a href='{{url}}' class="conversation-partners" title="{{title_hover}}">
                     {{recipients}}
                 </a>
                 <div class="private_message_count {{#if is_zero}}zero_count{{/if}}">
