refactor: De-duplicate login button code in portico templates.

--- a/static/styles/portico-signin.scss
+++ b/static/styles/portico-signin.scss
@@ -635,7 +635,7 @@ button.login-google-button {
     transform: translateX(15px) translateY(13px);
 }
 
-.azure-wrapper::before {
+.azuread-wrapper::before {
     content: "\f17a";
     position: absolute;
 
