--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -7,6 +7,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-home" aria-hidden="true"></i>
                     </span>
+                    {#- squash whitespace -#}
                     <span>{{ _('All messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
@@ -19,6 +20,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                     </span>
+                    {#- squash whitespace -#}
                     <span title="{{ _('Private messages') }} (P)">{{ _('Private messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
@@ -30,6 +32,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-at" aria-hidden="true"></i>
                     </span>
+                    {#- squash whitespace -#}
                     <span>{{ _('Mentions') }}</span>
                     <span class="count">
                         <span class="value"></span>
@@ -41,6 +44,7 @@
                     <span class="filter-icon">
                         <i class="fa fa-star" aria-hidden="true"></i>
                     </span>
+                    {#- squash whitespace -#}
                     <span>{{ _('Starred messages') }}</span>
                     <span class="count">
                         <span class="value"></span>
