portico: Update screenshots on /apps.
The border radius is a compromise between:
* Windows: no border radius on windows
* Mac: border radius top and bottom
* Ubuntu: border radius only on top

Ideally the image itself would just have border radius matching the OS, but
that's a bit tricky to do in the image editing software I'm using.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -2097,6 +2097,10 @@ nav ul li.active::after {
     z-index: 1;
 }
 
+.portico-landing.apps .hero .image img {
+    border-radius: 4px 4px 0px 0px;
+}
+
 .portico-landing.apps .hero .info .cta {
     text-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
     max-width: 600px;
