me messages: Fix hovers.
Going back to ancient days, we were doing JS-based
hovers to change the background color of sender
names when we hovered over them (but still used CSS
to actually change the background).

Now we just do this directly in CSS.

Also, for /me messages, the mouseover handlers were
too broad--now we only hover the name when you're
actually over it (which is consistent with normal
messages).

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1141,8 +1141,8 @@ td.pointer {
     font-weight: 700;
 }
 
-.sender_name_hovered .sender_name,
-.sender_name_hovered .sender_name-in-status {
+.sender_name:hover,
+.sender_name-in-status:hover {
     color: hsl(200, 100%, 40%);
 }
 
