me messages: Launch user popover when over name.
The code related to launching popovers was using
.sender_info_hover, which stopped enclosing the
person's name in messages like this:

    /me says hi

Instead of reverting the change, I just cleaned
up the selector in the click handler to specifically
hit these target points:

    avatar in any message
    sender name in normal message
    sender name in /me message

Apart from fixing the bug, this has two user-facing
changes:

    * If you click on your avatar, we launch the popup
      to the right of the avatar, not the name.
    * We don't handle clicks on the tiny bit of whitespace
      between an avatar and a name.

--- a/templates/zerver/archive/single_message.html
+++ b/templates/zerver/archive/single_message.html
@@ -2,7 +2,7 @@
     <div class="messagebox">
 <div class="messagebox-content">
     <div class="message_top_line">
-      <span class="message_sender{% if status_message %} sender_info_hover{% endif %} no-select">
+      <span class="message_sender no-select">
           {% if include_sender %}
           <div class="inline_profile_picture">
               <img src={{ avatar_url }} alt="" class="no-drag"/>
