--- a/static/templates/message_body.handlebars
+++ b/static/templates/message_body.handlebars
@@ -1,5 +1,5 @@
 <div class="message_top_line">
-    <span class="message_sender{{^status_message}} sender_info_hover{{/status_message}} no-select">
+    <span class="message_sender no-select">
 
         {{#if include_sender}}
         {{partial "message_avatar"}}
