refactor: Set /me avatar in me_message.handlebars.
This moves us to having a more decoupled way to
style /me messages.

This commit looks like a step backward in terms
of code cleanliness, but subsequent commits will
make it nicer.

--- a/static/templates/me_message.handlebars
+++ b/static/templates/me_message.handlebars
@@ -1,3 +1,5 @@
+{{partial "message_avatar"}}
+
 <span class="sender-status">
     <span class="sender_name-in-status auto-select" role="button" tabindex="0">{{msg/sender_full_name}}</span>
     {{#if sender_is_bot}}
