cleanup: Remove unnecessary 'magic' style for night mode.
This was introduced in e0236646

For 1.5 years we did not find a case that needed it (besides the
`a` tag hover state, that is not obvious if it was needed or it was
used as an example)

It is not obvious if this solution was a good idea. The concern was
that `body.night-mode` is more specific than `body` and some styles
might override others less specific in cases we might not want that.

Of course, we want that in the majority of cases, and css-specificity
rules are not simple to comprehend.

Good further reading:
http://cssspecificity.com/
https://specificity.keegan.st/

The added complexity of the resulting styles and the added code that
might not serve any practical purpose seem to not be worth it.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -3,6 +3,14 @@ body.night-mode {
     color: hsl(236, 33%, 90%);
     -webkit-font-smoothing: antialiased;
 
+    a:hover {
+        color: hsl(200, 79%, 66%);
+    }
+
+    ul.filters a:hover {
+        color: inherit;
+    }
+
     .app-main,
     .header-main,
     #tab_bar_underpadding,
