refactor: Move /me complexity out of body template.
One goal of this commit is to just make the "happy
path" code a lot easier to read.  It should be
pretty easy to verify that in this diff.

And then more stuff is now in me_message.

This is a pure code move, and it doesn't fix these
structural issues yet:

    * the "say hi" part of "/me says hi" is
      inside ".message_sender" (due to legacy
      positioning issues)

    * the avatar is outside of .sender-status
      (again due to legacy positioning issue)

    * we don't have sender_info_hover on
      the sender name (which causes it not
      to launch the user menu)

--- a/static/templates/me_message.handlebars
+++ b/static/templates/me_message.handlebars
@@ -1,14 +1,18 @@
-<span class="sender-status">
-    <span class="sender_name-in-status auto-select" role="button" tabindex="0">{{msg/sender_full_name}}</span>
-    {{#if sender_is_bot}}
-    <i class="zulip-icon bot" aria-label="{{t 'Bot' }}"></i>
-    {{/if}}
+<span class="message_sender no-select">
+    {{partial "message_avatar"}}
 
-    <span class="status-message auto-select">
-        {{{ status_message }}}
+    <span class="sender-status">
+        <span class="sender_name-in-status auto-select" role="button" tabindex="0">{{msg/sender_full_name}}</span>
+        {{#if sender_is_bot}}
+        <i class="zulip-icon bot" aria-label="{{t 'Bot' }}"></i>
+        {{/if}}
+
+        <span class="status-message auto-select">
+            {{{ status_message }}}
+        </span>
+
+        {{#if_and last_edit_timestr include_sender}}
+        {{partial "edited_notice"}}
+        {{/if_and}}
     </span>
-
-    {{#if_and last_edit_timestr include_sender}}
-    {{partial "edited_notice"}}
-    {{/if_and}}
 </span>
